k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wcagai
  labels:
    name: wcagai
    environment: production
